changing homepage path to root

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,13 @@
+body{
+// background: #000000;  /* fallback for old browsers */
+// background: -webkit-linear-gradient(to top, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+// background: linear-gradient(to top, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: black;
+  color: white;
+}
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: black;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -10,3 +17,16 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.brand{
+  font-family: 'Satisfy', cursive;
+  font-size: 30px;
+  margin-bottom: 0px;
+}
+
+.brand1{
+  font-family: 'Satisfy', cursive;
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+
